@@ -47,9 +47,9 @@ SET (CPACK_SOURCE_GENERATOR "TGZ")
 SET (CPACK_SOURCE_TOPLEVEL_TAG "")
 SET (CPACK_SYSTEM_NAME "")
 SET (CPACK_TOPLEVEL_TAG "")
-SET (CPACK_PACKAGE_VERSION_MAJOR "0")
+SET (CPACK_PACKAGE_VERSION_MAJOR "3")
 SET (CPACK_PACKAGE_VERSION_MINOR "0")
-SET (CPACK_PACKAGE_VERSION_PATCH "0.SVN")
+SET (CPACK_PACKAGE_VERSION_PATCH "0")
 SET (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 SET (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
 SET (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
@@ -144,6 +144,8 @@ add_library (openvas_base_shared SHARED ${FILES})
 set_target_properties (openvas_base_shared PROPERTIES COMPILE_FLAGS "${GLIB_CFLAGS}")
 set_target_properties (openvas_base_shared PROPERTIES OUTPUT_NAME "openvas_base")
 set_target_properties (openvas_base_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+set_target_properties (openvas_base_shared PROPERTIES SOVERSION "${CPACK_PACKAGE_VERSION_MAJOR}")
+set_target_properties (openvas_base_shared PROPERTIES VERSION "${CPACK_PACKAGE_VERSION}")
 
 ## Install
 
